First commit adding OIDC support.  No good E2E tests, and integration tests are broken.  Build with -DskipTests
