# dockstore-webservice/src/main/resources/openapi.yaml
@@ -1379,13 +1379,19 @@ paths:
                 $ref: "#/components/schemas/Token"
       security:
         - BEARER: []
-  /auth/tokens/google:
+  "/auth/tokens/oidc/{oidcProvider}":
     post:
       tags:
         - tokens
-      summary: Allow satellizer to post a new Google token to Dockstore.
-      description: A post method is required by satellizer to send the Google token
-      operationId: addGoogleToken
+      summary: Allow satellizer to post a new OIDC token to Dockstore.
+      description: A post method is required by satellizer to send the OIDC token
+      operationId: addOidcToken
+      parameters:
+        - name: oidcProvider
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
         $ref: "#/components/requestBodies/addTokenBody"
       responses:
@@ -6682,17 +6688,184 @@ components:
         content:
           type: string
     BioWorkflow:
-      allOf:
-        - $ref: "#/components/schemas/Workflow"
-        - type: object
-          properties:
-            parent_id:
-              type: integer
-              format: int64
-              readOnly: true
-            is_checker:
-              type: boolean
-          description: This describes one workflow in the dockstore
+      type: object
+      required:
+        - defaultTestParameterFilePath
+        - descriptorType
+        - gitUrl
+        - mode
+        - organization
+        - repository
+        - sourceControl
+        - workflow_path
+      properties:
+        aliases:
+          type: object
+          description: aliases can be used as an alternate unique id for entries
+          additionalProperties:
+            $ref: "#/components/schemas/Alias"
+        dbCreateDate:
+          type: string
+          format: date-time
+        dbUpdateDate:
+          type: string
+          format: date-time
+        has_checker:
+          type: boolean
+          readOnly: true
+        id:
+          type: integer
+          format: int64
+          description: Implementation specific ID for the container in this web service
+        input_file_formats:
+          type: array
+          readOnly: true
+          uniqueItems: true
+          items:
+            $ref: "#/components/schemas/FileFormat"
+        last_modified_date:
+          type: string
+          format: date-time
+          readOnly: true
+        output_file_formats:
+          type: array
+          readOnly: true
+          uniqueItems: true
+          items:
+            $ref: "#/components/schemas/FileFormat"
+        parent_id:
+          type: integer
+          format: int64
+          readOnly: true
+        topicId:
+          type: integer
+          format: int64
+          description: The Id of the corresponding topic on Dockstore Discuss
+        author:
+          type: string
+          description: This is the name of the author stated in the Dockstore.cwl
+        description:
+          type: string
+          description: This is a human-readable description of this container and what it
+            is trying to accomplish, required GA4GH
+        labels:
+          type: array
+          description: Labels (i.e. meta tags) for describing the purpose and contents of
+            containers
+          uniqueItems: true
+          items:
+            $ref: "#/components/schemas/Label"
+        users:
+          type: array
+          description: This indicates the users that have control over this entry,
+            dockstore specific
+          uniqueItems: true
+          items:
+            $ref: "#/components/schemas/User"
+        starredUsers:
+          type: array
+          description: This indicates the users that have starred this entry, dockstore
+            specific
+          uniqueItems: true
+          items:
+            $ref: "#/components/schemas/User"
+        email:
+          type: string
+          description: This is the email of the git organization
+        defaultVersion:
+          type: string
+          description: This is the default version of the entry
+        is_published:
+          type: boolean
+          description: Implementation specific visibility in this web service
+        last_modified:
+          type: integer
+          format: int32
+          description: "Implementation specific timestamp for last modified. Tools-> For
+            automated/manual builds: N/A. For hosted: Last time a file was
+            updated/created (new version created). Workflows-> For remote: When
+            refresh is hit, last time GitHub repo was changed. Hosted: Last time
+            a new version was made."
+        lastUpdated:
+          type: string
+          format: date-time
+          description: "Implementation specific timestamp for last updated on webservice.
+            Tools-> For automated builds: last time tool/namespace was refreshed
+            Dockstore, tool info (like changing dockerfile path) updated, or
+            default version selected. For hosted tools: when you created the
+            tool. Workflows-> For remote: When refresh all is hit for first
+            time. Hosted: Seems to be time created."
+        gitUrl:
+          type: string
+          description: This is a link to the associated repo with a descriptor, required
+            GA4GH
+        checker_id:
+          type: integer
+          format: int64
+          description: The id of the associated checker workflow
+          readOnly: true
+        conceptDoi:
+          type: string
+          description: The Digital Object Identifier (DOI) representing all of the versions
+            of your workflow
+        mode:
+          type: string
+          description: This indicates what mode this is in which informs how we do things
+            like refresh, dockstore specific
+          enum:
+            - FULL
+            - STUB
+            - HOSTED
+            - SERVICE
+        workflowName:
+          type: string
+          description: This is the name of the workflow, not needed when only one workflow
+            in a repo
+        organization:
+          type: string
+          description: This is a git organization for the workflow
+        repository:
+          type: string
+          description: This is a git repository name
+        sourceControl:
+          type: string
+          description: "This is a specific source control provider like github or bitbucket
+            or n/a?, required: GA4GH"
+        descriptorType:
+          type: string
+          description: This is a descriptor type for the workflow, either CWL, WDL, or
+            Nextflow (Defaults to CWL)
+          enum:
+            - CWL
+            - WDL
+            - NFL
+            - service
+        workflow_path:
+          type: string
+          description: This indicates for the associated git repository, the default path
+            to the primary descriptor document
+        defaultTestParameterFilePath:
+          type: string
+          description: This indicates for the associated git repository, the default path
+            to the test parameter file
+        workflowVersions:
+          type: array
+          description: Implementation specific tracking of valid build workflowVersions for
+            the docker container
+          uniqueItems: true
+          items:
+            $ref: "#/components/schemas/WorkflowVersion"
+        is_checker:
+          type: boolean
+        full_workflow_path:
+          type: string
+          readOnly: true
+        path:
+          type: string
+        source_control_provider:
+          type: string
+          readOnly: true
+      description: This describes one workflow in the dockstore
     Checksum:
       type: object
       properties:
@@ -6778,6 +6951,8 @@ components:
       properties:
         bdCatalystSevenBridgesImportUrl:
           type: string
+        autoRegister:
+          type: boolean
         bdCatalystTerraImportUrl:
           type: string
         bitBucketAuthUrl:
@@ -6814,10 +6989,10 @@ components:
           type: string
         gitlabScope:
           type: string
-        googleClientId:
-          type: string
         googleScope:
           type: string
+        oidcProvider:
+          $ref: "#/components/schemas/OidcProviderConfig"
         quayIoAuthUrl:
           type: string
         quayIoClientId:
@@ -7404,6 +7579,19 @@ components:
           type: string
           format: date-time
           description: Timestamp at which the notification was last updated
+    OidcProviderConfig:
+      type: object
+      properties:
+        authorizationEndpoint:
+          type: string
+        clientId:
+          type: string
+        providerName:
+          type: string
+        scope:
+          type: string
+      description: Configuration information for an OIDC Provider for UI clients of the
+        Dockstore webservice.
     Organization:
       type: object
       required:
@@ -7828,6 +8016,9 @@ components:
           format: int64
           description: Implementation specific ID for the token in this web service
           readOnly: true
+        tokenExpiry:
+          type: string
+          format: date-time
         tokenSource:
           type: string
           description: Source website for this token
